--- a/TravelCostApp/nbproject/private/private.properties
+++ b/TravelCostApp/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\New User\\AppData\\Roaming\\NetBeans\\16\\build.properties
+user.properties.file=C:\\Users\\wrl123u\\AppData\\Roaming\\NetBeans\\12.6\\build.properties
